--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Tracer Study"
 APP_ENV=local
 APP_KEY=base64:3QmjPGHJT8Tp3Px5yMv06bzd+f484CR9rHtmp+YyWng=
 APP_DEBUG=true
